# chess-edu-platform

./: .env.example  .gitignore  CLAUDE.md  Makefile  RELEASE_NOTES.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
backend/: .gitignore  Dockerfile  alembic.ini  data.db-shm  data.db-wal  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/ai/: __init__.py  engine.py  fallback.py  llm_client.py  puzzle_engine.py  review_engine.py  teaching_engine.py
backend/app/middleware/: logging_middleware.py  rate_limit.py
backend/app/models/: __init__.py  achievement.py  adaptive.py  adventure.py  character.py  course.py  credits.py  diagnosis.py  game.py  gamification.py  honor.py  kids.py  membership.py  notification.py  puzzle.py  remark.py  teacher.py  train.py  user.py
backend/app/routers/: __init__.py  admin.py  adventure.py  assessment.py  auth.py  credits.py  dashboard.py  diagnosis.py  gamification.py  honor.py  learn.py  notifications.py  play.py  puzzles.py  student_extra.py  teacher.py  train.py  user.py
backend/app/schemas/: __init__.py  admin.py  adventure.py  assessment.py  auth.py  common.py  credits.py  (+13 more)
backend/migrations/: env.py
backend/scripts/: add_honor_table.py  add_referral_columns.py  add_remark_table.py  import_content.py  import_lichess_puzzles.py  load_puzzles_to_db.py  migrate_sqlite_to_pg.py  seed_meadow_achievement.py
backend/tests/: conftest.py  test_adventure_quiz.py  test_grant_achievement.py  test_streak_service.py
(+351 files in other folders)
